mm_web_app/styles/pages/_stream.scss
/* ... */
.share-fullname {
  font-weight: bold;
  color: #808080;
}

.share-code {
  margin-left: 4px;
  color: #999;
}

.fragment-hash {
  @include clearfix();
  padding: 0 20px;
  margin-bottom: 20px;
  text-align: center;
  .btn-share-detail {
    margin-left: 10px;
    @media (max-width: 490px) {
      margin-top: 15px;
    }
  }
}


/*-----thumbnail-box-----*/

.thumbnail-box {
  @include clearfix();
  @include border-radius(8px);
  padding: 0;
  .thumbnail {
    position: relative;
    .thumbnail-image {
      @include border-radius(8px);
      position: relative;
      min-height: 120px;
      overflow: hidden;
      display: block;
      .thumbnail-overlay {
        @include border-radius(4px);
        position: relative;
        display: block;
        overflow: hidden;
        img {
          @include border-radius(8px);
          object-fit: contain;
          margin: 0 auto;
          display: block;
          max-width: 335px;
          @media (max-width: 1450px) {
            max-width: 270px;
          }
          @media (max-width: 1050px) {
            max-width: 225px;
          }
          @media (max-width: 690px) {
            max-width: 250px;
          }
          @media (max-width: 490px) {
            max-width: 260px;
          }
        }
        &::after,
        &::before {
          @include abs-pos ($top: 0, $right: 0, $bottom: 0, $left: 0);
          @include transition(background 0.7s linear);
          @include border-radius(8px);
          content: " ";
          height: 100%;
          width: 100%;
          overflow: hidden;
        }
        &::after {
          background: rgba(0, 0, 0, 0.02);
          bottom: 0;
          z-index: 5;
        }
        &::before {
          z-index: 101;
          visibility: hidden;
          background: -webkit-linear-gradient(rgba(80, 80, 80, 0), rgba(80, 80, 80, 0.2) 70%, rgba(80, 80, 80, 0.5));
          background: linear-gradient(rgba(80, 80, 80, 0), rgba(80, 80, 80, 0.2) 70%, rgba(80, 80, 80, 0.5));
        }
      }
      .btn-discovery {
        img {
          @include border-radius(0);
          width: 20px;
          height: 20px;
        }
      }
      .mix-tag {
        @include abs-pos ($top: 0, $right: 15px, $bottom: auto, $left: auto);
        z-index: 1000;
      }
    }
    .caption {
      padding-top: 15px;
      text-align: left;
      color: #404040;
      .caption-title {
        margin-bottom: 0.3125rem;
        font-size: 0.875rem;
        line-height: 1.3125rem;
        font-weight: bold;
        a {
          @include transition(all 0.2s ease-out 0s);
          color: #2db7f5;
          &:hover,
          &:focus {
            @include transition(all 0.3s ease-out 0s);
            color: #0292d3;
            text-decoration: none;
          }
        }
      }
      p {
        margin-bottom: 0.4rem;
        font-size: 0.75rem;
      }
      .filter-box {
        @include clearfix();
        .filter-rating {
          padding: 0;
          float: left;
          width: 64px;
          span {
            cursor: default;
          }
        }
        .parameter-item {
          overflow: hidden;
        }
        .caption-title {
          margin-bottom: 0.2rem;
          line-height: 1rem;
          max-width: 170px;
          white-space: nowrap;
          overflow: hidden;
          text-overflow: ellipsis;
        }
        p {
          margin-bottom: 0;
        }
      }
      .credit-info {
        font-size: 0.75rem;
        margin: 0;
        padding: 0 8px 3px;
        text-align: left;
        img {
          vertical-align: middle;
        }
      }
    }
    .para-date {
      margin: 0.4375rem 0 0;
      .date-time {
        font-size: 0.75rem;
        display: inline-block;
      }
    }
    .rating {
      span {
        line-height: 18px;
        cursor: default !important;
      }
    }
    &:hover .thumbnail-overlay {
      &::before,
      &::after {
        @include transition(background 0.9s linear);
        animation-name: pulse;
        animation-duration: 2s;
        animation-fill-mode: both;
      }
      &::before {
        visibility: visible;
      }
    }
  }
  .btn-discovery {
    @include border-radius(3px);
    @include transform(translateY(-50px));
    @include transition(all 0.3s ease);
    @include abs-pos ($bottom: auto, $right: auto, $top: 10px, $left: 12px);
    z-index: 500;
    border: 0;
    width: 36px;
    height: 36px;
    line-height: 31px;
    text-align: center;
    box-shadow: none;
    color: #555;
    text-shadow: none;
    background-color: #fbf8f8;
    background-clip: padding-box;
    font-size: 0.875rem;
    opacity: .97;
    white-space: nowrap;
    visibility: hidden;
    opacity: 0;
    &:hover,
    &:focus,
    &:active {
      background-color: #fff;
      border: 0;
    }
  }
  &:hover,
  &:focus {
    .btn-discovery {
      @include transform(translateY(0));
      @include transition(all 0.3s ease);
      opacity: 1;
      visibility: visible;
    }
  }
}
/* ... */

